# MavSdk_LegacyABI

./: .gitmodules  CMakeLists.txt
jsoncpp/: CMakeLists.txt
src/mavsdk/: CMakeLists.txt
src/mavsdk/core/: connection.h  fs.cpp  fs.h  mavlink_command_receiver.h  mavlink_command_sender.cpp  mavlink_command_sender.h  mavlink_ftp.cpp  mavlink_ftp.h  mavlink_message_handler.cpp  mavlink_message_handler.h  mavlink_parameter_cache.cpp  mavlink_parameter_cache.h  mavlink_parameter_cache_test.cpp  mavlink_parameter_server.cpp  mavlink_parameter_server.h  mavlink_request_message_handler.cpp  mavlink_request_message_handler.h  mavlink_statustext_handler.cpp  mavlink_statustext_handler.h  mavsdk.cpp  mavsdk_impl.cpp  mavsdk_impl.h  param_value.cpp  param_value.h  request_message.h  safe_queue.h  safe_queue_test.cpp  system_impl.cpp  system_impl.h
src/mavsdk/core/include/mavsdk/: mavsdk.h
src/mavsdk/plugins/camera/: camera_definition.cpp
src/mavsdk/plugins/camera_server/: camera_server_impl.cpp  camera_server_impl.h
src/mavsdk/plugins/component_information_server/: component_information_server_impl.cpp  component_information_server_impl.h
src/mavsdk/plugins/mavlink_passthrough/: mavlink_passthrough.cpp  mavlink_passthrough_impl.cpp  mavlink_passthrough_impl.h
src/mavsdk/plugins/mission_raw/: mission_import.cpp  mission_import.h
src/mavsdk/plugins/server_utility/: server_utility_impl.cpp  server_utility_impl.h
src/mavsdk/plugins/telemetry/: telemetry_impl.cpp  telemetry_impl.h
src/mavsdk/plugins/tracking_server/: tracking_server_impl.cpp  tracking_server_impl.h
(+3 files in other folders)
